[package]
name = "robo_instructus_translation"
version = "0.1.0"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
rustc-hash = "1"
lazy_static = "1"
parking_lot = "0.8"
crossbeam-channel = { version = "0.3.8", optional = true }
log = { version = "0.4", optional = true }
google_translate = { path = "goog", optional = true }
indexmap = { version = "1", optional = true }
env_logger = { version = "0.6", optional = true }

[build-dependencies]
quote = "0.6"

[features]
realtime = ["crossbeam-channel", "log", "google_translate", "indexmap"]
fill = ["env_logger", "realtime"]
sort = ["env_logger", "log"]

[workspace]
