[package]
name = "robo_instructus_translation"
version = "0.4.2"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
rustc-hash = "2"
parking_lot = "0.12"
once_cell = { version = "1", features = ["parking_lot"] }
log = "0.4"
crossbeam-channel = { version = "0.5", optional = true }
google_translate = { path = "goog", optional = true }
indexmap = { version = "2", optional = true }
env_logger = { version = "0.11", optional = true }

[build-dependencies]
quote = "1"

[features]
realtime = ["crossbeam-channel", "google_translate", "indexmap"]
fill = ["env_logger", "realtime"]
sort = ["env_logger"]

[workspace]
